# mcc-sleep-disorders

./: Dockerfile  README.md  main.py  notebook.ipynb  pyproject.toml
data/processed/: data_clean.csv
models/: label_mappings.pkl  logreg_model.pkl  random_forest_model.pkl  xgboost_model.pkl
src/: app.py  model.py  predict.py  sample_request.py  train.py
